--- a/src/reviewee/Carousel.scss
+++ b/src/reviewee/Carousel.scss
@@ -2,3 +2,10 @@
   margin: auto;
   width: 700px;
 }
+
+.reviewer-profile-image {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 50%;
+}
