--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,11 @@ body {
   margin-top: 80px;
 }
 
-.image-container img {
-  max-width: 500px;
+.left {
+  float: left;
 }
 
 .right {
   float: right;
+  max-width: 430px;
 }
