--- a/src/navbar/Navbar.scss
+++ b/src/navbar/Navbar.scss
@@ -1,8 +1,16 @@
 @use '../base';
 
 .branding {
-  width: base.$side-nav-width;
-  padding: 10px 0;
+  &-container {
+    width: base.$side-nav-width;
+    padding-top: 10px;
+  }
+
+  &-title {
+    font-weight: 800;
+  }
+  width: 40px;
+  padding: 0 10px 0 0;
 }
 
 .navbar-container {
@@ -22,7 +30,17 @@
 
   &-item {
     padding: 10px 20px;
+    a {
+      color: black;
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
+}
+
+.nav-links {
+  padding-top: 5px;
 }
 
 .account-controls {
@@ -33,4 +51,3 @@
     justify-content: space-between;
   }
 }
-
