--- a/src/reviewee/RevieweeDashboard.scss
+++ b/src/reviewee/RevieweeDashboard.scss
@@ -1,7 +1,12 @@
+@use '../base';
+
 .reviewee-dashboard {
   &-container {
     display: flex;
+    max-width: base.$layout-width;
+    margin: 0 auto;
   }
+
   &-content {
     position: absolute;
     left: 50%;
@@ -9,21 +14,35 @@
   }
 }
 .sidebar {
+  padding: 0;
   &-container {
     display: inline;
   }
   &-item {
     list-style: none;
     color: black;
-    padding: 10px 0;
+    padding: 10px;
+    font-size: 12px;
+
     button {
       background-color: inherit;
       border: none;
       padding: 0;
-      font-weight: 600;
+      font-weight: 400;
     }
   }
   &-subtitle {
     font-size: 14px;
+    padding: 10px;
+    margin: 0;
+    text-decoration: underline;
+  }
+}
+
+.sidebar-item-active {
+  background-color: black;
+  border-radius: 8px;
+  button {
+    color: white;
   }
 }
