--- a/src/common/shc-layout.scss
+++ b/src/common/shc-layout.scss
@@ -13,6 +13,7 @@
         height: 100%;
         width: base.$side-nav-width;
         padding: 24px;
+        border-right: 2px solid #f2f2f2;
         /* background-color: black; */
     }
 
