--- a/src/reviewee/reviewee-dashboard-new-request.scss
+++ b/src/reviewee/reviewee-dashboard-new-request.scss
@@ -4,16 +4,24 @@
   &-container {
     display: flex;
     flex-flow: column;
-    margin: auto;
+    margin: 0 auto;
+    justify-content: center;
     align-items: center;
   }
 
   &-card {
-    height: 450px;
-    width: 300px;
     display: flex;
+    flex-flow: column;
     justify-content: space-evenly;
     align-items: center;
+
+    height: 450px;
+    width: 300px;
+    background-color: white;
+    box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.05);
+    border: 0;
+    border-radius: 30px;
+    margin: 25px;
 
     &-container {
       display: flex;
