--- a/src/common/shc-layout.scss
+++ b/src/common/shc-layout.scss
@@ -4,7 +4,7 @@
     &-container {
         display: flex;
         height: 100vh;
-        max-width: base.$layout-width;
+        // max-width: base.$layout-width;
         margin: auto;
         /* background-color: gray; */
     }
