--- a/src/reviewee/Carousel.scss
+++ b/src/reviewee/Carousel.scss
@@ -1,8 +1,54 @@
-.carousel-container {
-  margin: auto;
-  width: 700px;
-}
+.carousel {
+  &-container {
+    margin: 60px auto;
+    width: 100%;
+  }
+  &-title {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+    color: #7c7c7c;
+    border-bottom: 1px solid #c4c4c4;
+    padding-bottom: 10px;
+  }
 
+  &-your-submission {
+    margin-top: 40px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  &-submission-type {
+    margin-top: 8px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    color: #7c7c7c;
+  }
+  &-background-info-container {
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 27px;
+    padding: 18px 27px;
+  }
+  &-feedback {
+    &-container {
+      margin-top: 50px;
+    }
+    &-title {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 27px;
+    }
+    &-empty {
+      text-align: center;
+      &-image {
+        margin: 50px 0;
+      }
+    }
+  }
+}
 .reviewer-profile-image {
   width: 300px;
   height: 300px;
