--- a/src/reviewee/RevieweeDashboard.scss
+++ b/src/reviewee/RevieweeDashboard.scss
@@ -1,48 +1,12 @@
-@use '../base';
-
 .reviewee-dashboard {
   &-container {
     display: flex;
-    max-width: base.$layout-width;
-    margin: 0 auto;
+    width: 100%;
   }
 
   &-content {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-.sidebar {
-  padding: 0;
-  &-container {
-    display: inline;
-  }
-  &-item {
-    list-style: none;
-    color: black;
-    padding: 10px;
-    font-size: 12px;
-
-    button {
-      background-color: inherit;
-      border: none;
-      padding: 0;
-      font-weight: 400;
-    }
-  }
-  &-subtitle {
-    font-size: 14px;
-    padding: 10px;
-    margin: 0;
-    text-decoration: underline;
-  }
-}
-
-.sidebar-item-active {
-  background-color: black;
-  border-radius: 8px;
-  button {
-    color: white;
+    width: 100%;
+    padding: 0 40px;
+    // min-width: 600px;
   }
 }
