--- a/src/reviewee/RevieweeSidebarItem.scss
+++ b/src/reviewee/RevieweeSidebarItem.scss
@@ -33,6 +33,9 @@
       }
     }
     &-date {
+      &-container {
+        
+      }
       font-style: normal;
       font-weight: normal;
       font-size: 11px;
